Bug fix and add comments

--- a/index.html
+++ b/index.html
@@ -47,21 +47,17 @@
             </div>
             <!-- End Form Section -->
 
-            <!-- Note tasks  -->
-
+            <!-- Tasks Container  -->
             <div id="notesContainer" class="row"></div>
-
-            <!-- End note tasks  -->
+            <!-- End Tasks Container  -->
 
         </main>
-        <!-- End main Content  -->
+        <!-- End Main Content  -->
 
         <!-- Footer -->
         <footer> All Rights Reserved To Nir Shoval 2023 Ⓒ</footer>
-        <!-- End footer -->
+
     </section>
 
-
 </body>
-
 </html>
